# hotblocks-service-rust

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  PLAN.md  README.md
.github/workflows/: docker.yml  tests.yaml
crates/data-service-core/: Cargo.toml
crates/data-service-core/src/: chain.rs  http.rs  lib.rs  metrics.rs  service.rs  source.rs  types.rs
crates/data-service-core/tests/: integration.rs
crates/evm-data-service/: Cargo.toml
crates/evm-data-service/src/: main.rs
crates/evm-source/: Cargo.toml
crates/evm-source/src/: chain_utils.rs  fetch.rs  ingest.rs  lib.rs  mapping.rs  normalization.rs  rpc_data.rs  source.rs  types.rs  verification.rs
crates/evm-source/tests/: debug_traces.rs  latency.rs  parity.rs  pipeline.rs
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: client.rs  error.rs  lib.rs  rate.rs  transport.rs
crates/rpc-client/src/transport/: ws.rs
crates/rpc-client/tests/: integration.rs  ws.rs
fixtures/: base-logs.json  base-receipts.json  base-traces.json  gnosis-block-no-total-difficulty.json  gnosis-pipeline.json
