[workspace]
resolver = "2"
members = [
    "crates/data-service-core",
    "crates/rpc-client",
    "crates/evm-source",
    "crates/evm-data-service",
]

[workspace.package]
edition = "2021"
version = "0.1.1"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
bytes = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
axum = "0.8"
zstd = "0.13"
flate2 = "1"
prometheus = "0.14"
clap = { version = "4", features = ["derive"] }
alloy-primitives = "1"
alloy-rlp = "0.3"
alloy-trie = "0.9"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"

[profile.release]
lto = "thin"
