[package]
name = "evm-data-service"
version.workspace = true
edition.workspace = true

[dependencies]
data-service-core = { path = "../data-service-core" }
evm-source = { path = "../evm-source" }
rpc-client = { path = "../rpc-client" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
